--- a/Translations/German/text-trait-change.xml
+++ b/Translations/German/text-trait-change.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- edited with XMLSpy v2020 (x64) (http://www.altova.com) by Andrew Auseon (Private) -->
+<!-- edited with XMLSpy v2019 rel. 3 sp1 (x64) (http://www.altova.com) by Leyla Johnson (Private) -->
 <Root>
 	<!--Assets/GameAssets/Resources/Infos/trait.xml-->
 	<Entry>
@@ -585,5 +585,25 @@
 	<Entry>
 		<zType>TEXT_TRAIT_ASCETIC</zType>
 		<Translation>Enthaltsam</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRAIT_HORSE</zType>
+		<Translation>Pferd</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRAIT_AMARNA_REFORMER</zType>
+		<Translation>Amarna Reformer</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRAIT_BOARD_GAME</zType>
+		<Translation>Board Game</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRAIT_BARRACKS_INSTRUCTOR</zType>
+		<Translation>Barracks Instructor</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_TRAIT_DESERTER</zType>
+		<Translation>Deserter</Translation>
 	</Entry>
 </Root>
