--- a/Translations/German/text-yield-change.xml
+++ b/Translations/German/text-yield-change.xml
@@ -37,7 +37,7 @@
 		<zType>TEXT_YIELD_MAINTENANCE</zType>
 		<Translation>Wartung</Translation>
 	</Entry>
-	<Entry>
+	<Entry comment="Note, since this is the only countable noun (non-mass) using a different scheme for the alternate forms">
 		<zType>TEXT_YIELD_ORDERS</zType>
 		<Translation>Befehle</Translation>
 	</Entry>
